--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,9 @@
         <li>Commit 2</li>
         <li>Commit 3</li>
     </ul>
+    <h3>Feature 2</h3>
+    <ul>
+        <li>Commit 1</li>
+    </ul>
 </body>
 </html>
